--- a/app/src/main/res/layout/popup_preview_video.xml
+++ b/app/src/main/res/layout/popup_preview_video.xml
@@ -41,7 +41,7 @@
             app:srcCompat="@drawable/ic_btn_back_white_ytvideo" />
 
         <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-            android:id="@+id/youtube_player_view"
+            android:id="@+id/youtube_player_view_preview"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
