--- a/app/src/main/res/layout/fragment_view_youtube_video.xml
+++ b/app/src/main/res/layout/fragment_view_youtube_video.xml
@@ -254,7 +254,7 @@
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="@android:color/transparent"
                 android:cropToPadding="false"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_save_video" />
