Aanmaken van CinemaOverviewVieModel - verder optimaliseren van DetailsContainerViewModel : nu ook deleteEnabled - aanmaken van CinemaOverviewViewModel gaf problemen met di. Koin kan niet overweg met dynamische klassen, en geeft dan een fout dat er reeds een definitie bestaat voor een klasse alhoewel een andere T. Opgelost door alle generische klassen abstract te maken en toch voor backpack en cinema concrete klassen te maken die de abstracte implementeren

--- a/app/src/main/res/layout/fragment_backpack.xml
+++ b/app/src/main/res/layout/fragment_backpack.xml
@@ -110,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/prullenbak"
-            android:onClick="@{() -> backpackViewModel.setIsInEditMode()}"
+            android:onClick="@{() -> backpackViewModel.onDeleteClicked()}"
             app:layout_constraintEnd_toStartOf="@+id/guide_items_vertical_end"
             app:layout_constraintTop_toTopOf="@+id/guide_rv_horizontal_2"
             app:srcCompat="@drawable/prullenbak" />
@@ -120,7 +120,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/search_btn"
-            android:alpha="@{backpackViewModel.isInEditMode == editModeState.OPEN ? 0.5F : 1F}"
+            android:alpha="@{backpackViewModel.deleteEnabled == true ? 0.5F : 1F}"
             android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -130,7 +130,7 @@
             android:id="@+id/btn_backpack_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:alpha="@{backpackViewModel.isInEditMode == editModeState.OPEN ? 0.5F : 1F}"
+            android:alpha="@{backpackViewModel.deleteEnabled == true ? 0.5F : 1F}"
             android:background="@drawable/add_btn"
             android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -141,7 +141,7 @@
             android:layout_width="@dimen/material_icon_width"
             android:layout_height="@dimen/material_icon_height"
             android:layout_marginStart="16dp"
-            android:alpha="@{backpackViewModel.isInEditMode == editModeState.OPEN ? 0.5F : 1F}"
+            android:alpha="@{backpackViewModel.deleteEnabled == true ? 0.5F : 1F}"
             android:background="@drawable/ic_return"
             android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             android:contentDescription="@string/cancel"
