--- a/app/src/main/res/layout/fragment_cinema_start.xml
+++ b/app/src/main/res/layout/fragment_cinema_start.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="cinemaOverviewViewModel"
+            type="be.hogent.faith.faith.cinema.CinemaOverviewViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,6 +21,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/event_textInput_height"
             android:hint="@string/wat_zoek_je"
+            android:paddingStart="16dp"
             android:paddingEnd="16dp"
             app:hintEnabled="false"
             app:layout_constraintBottom_toTopOf="@+id/guide_rv_container_horizontal"
@@ -32,11 +35,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/search_hint_film"
+                android:text="@={cinemaOverviewViewModel.searchString}"
                 android:inputType="text" />
-
         </com.google.android.material.textfield.TextInputLayout>
-
-
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_cinema_chooseDate"
@@ -46,7 +47,8 @@
             android:layout_marginBottom="25dp"
             android:backgroundTint="@color/color_white"
             android:gravity="center"
-            android:text="Datum"
+            android:onClick="@{() -> cinemaOverviewViewModel.onDateRangeClicked()}"
+            android:text="@{cinemaOverviewViewModel.dateRangeString}"
             app:icon="@drawable/ic_kalender"
             app:iconGravity="textStart"
             app:iconSize="34dp"
@@ -62,6 +64,7 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/knop_terug_wit"
             android:contentDescription="@string/cancel"
+            android:onClick="@{() -> cinemaOverviewViewModel.goToCityScreen()}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -139,6 +142,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/prullenbak"
+            android:onClick="@{() -> cinemaOverviewViewModel.onDeleteClicked()}"
             android:contentDescription="@string/delete"
             app:layout_constraintBottom_toBottomOf="@+id/rv_container"
             app:layout_constraintStart_toStartOf="@+id/rv_container"
@@ -146,11 +150,12 @@
 
         <ImageButton
             android:id="@+id/btn_cinema_add"
-            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/add_btn"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/achtergrond_publiek"
+            android:onClick="@{() -> cinemaOverviewViewModel.onAddButtonClicked()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/rv_container"
             app:srcCompat="@drawable/add_btn" />
@@ -187,10 +192,13 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:contentDescription="@string/create_film"
+            android:onClick="@{() -> cinemaOverviewViewModel.onMakeFilmClicked()}"
             app:layout_constraintBottom_toBottomOf="@+id/achtergrond_publiek"
             app:layout_constraintEnd_toEndOf="@+id/achtergrond_publiek"
             app:layout_constraintStart_toStartOf="@+id/achtergrond_publiek"
             app:layout_constraintTop_toBottomOf="@+id/rv_container"
             app:srcCompat="@drawable/ic_btn_maak_filmpje" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
