Create SaveVideoDialogFragment + rename corresponding layout

--- a/app/src/main/res/layout/dialog_cinema_save_video.xml
+++ b/app/src/main/res/layout/dialog_cinema_save_video.xml
@@ -4,6 +4,9 @@
 
     <data>
 
+        <variable
+            name="userViewModel"
+            type="be.hogent.faith.faith.UserViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
