Add Photo, Drawing and ExternalFile - CinemaDetailFragment/SaveCinemaDetailDialog and updates in DetailsContaineViewModel Moved ExternalFile to Details iso Backpack

--- a/app/src/main/res/layout/fragment_view_external_video.xml
+++ b/app/src/main/res/layout/fragment_view_external_video.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="photoDetailViewViewModel"
-            type="be.hogent.faith.faith.backpackScreen.externalFile.ExternalFileViewModel" />
+            type="be.hogent.faith.faith.details.externalFile.ExternalFileViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/screen_take_photo"
