--- a/app/src/main/res/layout/dialog_cinema_savedetail.xml
+++ b/app/src/main/res/layout/dialog_cinema_savedetail.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="backpackViewModel"
-            type="be.hogent.faith.faith.backpackScreen.BackpackViewModel" />
+            name="cinemaViewModel"
+            type="be.hogent.faith.faith.cinema.CinemaOverviewViewModel" />
 
         <variable
             name="userViewModel"
@@ -29,7 +29,7 @@
 
 
             <ImageButton
-                android:id="@+id/btn_save_backpack_cancel"
+                android:id="@+id/btn_save_cinema_cancel"
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
                 android:layout_marginEnd="16dp"
@@ -40,7 +40,7 @@
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <ImageButton
-                android:id="@+id/btn_save_backpack"
+                android:id="@+id/btn_save_cinema"
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
                 android:layout_marginTop="16dp"
@@ -64,10 +64,10 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="10dp"
-                app:layout_constraintBottom_toTopOf="@+id/btn_save_backpack_cancel"
+                app:layout_constraintBottom_toTopOf="@+id/btn_save_cinema_cancel"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_save_backpack">
+                app:layout_constraintTop_toBottomOf="@+id/btn_save_cinema">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintlayout"
@@ -90,7 +90,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_weight="1"
                         app:errorEnabled="true"
-                        app:errorResId="@{backpackViewModel.titleErrorMessage}">
+                        app:errorResId="@{cinemaViewModel.titleErrorMessage}">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/txt_save_event_title"
@@ -98,7 +98,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="text"
                             android:maxLength="30"
-                            android:nextFocusDown="@+id/txt_save_event_notes" />
+                           />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
