--- a/app/src/main/res/layout/fragment_add_external_file.xml
+++ b/app/src/main/res/layout/fragment_add_external_file.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="externalFileViewModel"
-            type="be.hogent.faith.faith.backpackScreen.externalFile.ExternalFileViewModel" />
+            type="be.hogent.faith.faith.details.externalFile.ExternalFileViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
