--- a/app/src/main/res/layout/fragment_cinema_create_video.xml
+++ b/app/src/main/res/layout/fragment_cinema_create_video.xml
@@ -5,6 +5,11 @@
 
     <data>
 
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="be.hogent.faith.faith.cinema.CinemaCreateVideoViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,7 +26,7 @@
             android:hint="@string/wat_zoek_je"
             android:paddingEnd="16dp"
             app:hintEnabled="false"
-            app:layout_constraintBottom_toTopOf="@+id/rv_video_details_container"
+            app:layout_constraintBottom_toTopOf="@+id/guide_rv_container_horizontal"
             app:layout_constraintEnd_toStartOf="@+id/btn_cinema_chooseDate"
             app:layout_constraintStart_toStartOf="@+id/guide_rv_container_vertical1"
             app:startIconDrawable="@drawable/ic_search"
@@ -31,6 +36,7 @@
                 android:id="@+id/textInputEditText_cinema_details_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="@{viewModel.isRendering == true ? false : true}"
                 android:hint="@string/search_hint_film"
                 android:inputType="text" />
 
@@ -44,12 +50,13 @@
             android:layout_height="50dp"
             android:layout_marginBottom="25dp"
             android:backgroundTint="@color/color_white"
+            android:clickable="@{viewModel.isRendering == true ? false : true}"
             android:gravity="center"
             android:text="Datum"
             app:icon="@drawable/ic_kalender"
             app:iconGravity="textStart"
             app:iconSize="34dp"
-            app:layout_constraintBottom_toTopOf="@+id/rv_video_details_container"
+            app:layout_constraintBottom_toTopOf="@+id/guide_rv_container_horizontal"
             app:layout_constraintEnd_toStartOf="@+id/guide_rv_container_vertical2" />
 
 
@@ -60,6 +67,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/knop_terug_wit"
+            android:clickable="@{viewModel.isRendering == true ? false : true}"
             android:contentDescription="@string/cancel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -96,6 +104,7 @@
             android:layout_height="12dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.15" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_rv_container_horizontal2"
             android:layout_width="8dp"
@@ -114,20 +123,21 @@
             android:verticalScrollbarPosition="right"
             app:layout_constraintBottom_toBottomOf="@+id/rv_video_details_container"
             app:layout_constraintEnd_toEndOf="@+id/rv_video_details_container"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/rv_video_details_container"
-            app:layout_constraintTop_toTopOf="@+id/rv_video_details_container" />
+            app:layout_constraintTop_toTopOf="@+id/rv_video_details_container"
+            tools:visibility="visible" />
 
         <ImageButton
             android:id="@+id/btn_create_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
+            android:clickable="@{viewModel.isRendering == true ? false : true}"
+            android:contentDescription="@string/btn_create_video"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guide_rv_container_vertical2"
             app:layout_constraintTop_toTopOf="@+id/guide_rv_container_horizontal2"
-            android:background="#00FFFFFF"
-            app:srcCompat="@drawable/ic_knop_render"
-            android:contentDescription="@string/btn_create_video" />
+            app:srcCompat="@drawable/ic_knop_render" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -136,6 +146,53 @@
             app:layout_constraintEnd_toStartOf="@+id/guide_rv_container_vertical1"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/cinema_popcorn" />
+
+        <ProgressBar
+            android:id="@+id/progressBar_length_video"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:progressDrawable="@drawable/red_progress_bar"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guide_rv_container_vertical2"
+            app:layout_constraintStart_toStartOf="@+id/guide_rv_container_vertical1"
+            app:layout_constraintTop_toBottomOf="@+id/rv_video_details_container"
+            android:progress="25"/>
+
+        <ImageView
+            android:id="@+id/layer_rendering"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:alpha="0.5"
+            android:src="#0000FF"
+            android:visibility="@{viewModel.isRendering == true ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/bg_vogel"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="@drawable/round_button"
+            android:backgroundTint="@color/color_white"
+            android:visibility="@{viewModel.isRendering == true ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/layer_rendering"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/vogel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="@{viewModel.isRendering == true ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/layer_rendering"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_vogeltje" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
