--- a/app/src/main/res/layout/panel_drawing_undo_redo.xml
+++ b/app/src/main/res/layout/panel_drawing_undo_redo.xml
@@ -13,7 +13,6 @@
         android:id="@+id/cardview_draw_undo_redo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/panel_corner_radius"
         app:cardElevation="@dimen/panel_elevation">
 
         <LinearLayout
@@ -24,10 +23,11 @@
             <ImageButton
                 android:id="@+id/btn_draw_undo"
                 android:layout_width="@dimen/material_icon_width"
-                android:layout_height="@dimen/material_icon_width"
+                android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:background="@drawable/ic_undo"
                 android:contentDescription="@string/undo"
+                android:scaleType="centerInside"
                 android:onClick="@{()->drawViewModel.undo()}" />
 
             <View
@@ -38,7 +38,8 @@
             <ImageButton
                 android:id="@+id/btn_draw_redo"
                 android:layout_width="@dimen/material_icon_width"
-                android:layout_height="@dimen/material_icon_width"
+                android:layout_height="wrap_content"
+                android:scaleType="centerInside"
                 android:layout_margin="16dp"
                 android:background="@drawable/ic_redo"
                 android:contentDescription="@string/redo"
