--- a/app/src/main/res/xml/filtermenu_slide.xml
+++ b/app/src/main/res/xml/filtermenu_slide.xml
@@ -10,6 +10,11 @@
         <OnClick
             app:clickAction="toggle"
             app:targetId="@+id/btn_backpack_search" />
+        <OnSwipe
+            app:dragDirection="dragRight"
+            app:touchAnchorId="@id/backpack_menu_filter"
+            app:touchAnchorSide="right" />
+
 
     </Transition>
     <Transition
@@ -33,15 +38,14 @@
 
         <Constraint
             android:id="@id/backpack_menu_filter"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guide_filtermenu_vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@id/guide_items_vertical_start"
-            app:layout_constraintGuide_percent="0.32" />
+            app:layout_constraintGuide_percent="0.28" />
         <Constraint
             android:id="@id/btn_backpack_search"
             android:visibility="gone" />
